[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://common/UI/HUD.gd" id="1_w1m4h"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_w1m4h")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[node name="TopBar" type="HBoxContainer" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
alignment = 1

[node name="LeftPanel" type="VBoxContainer" parent="Root/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerInfo" type="HBoxContainer" parent="Root/TopBar/LeftPanel"]
layout_mode = 2

[node name="PerspectiveLabel" type="Label" parent="Root/TopBar/LeftPanel/PlayerInfo"]
layout_mode = 2
text = "Perspective: FPS"
size_flags_horizontal = 3

[node name="LevelLabel" type="Label" parent="Root/TopBar/LeftPanel/PlayerInfo"]
layout_mode = 2
text = "Level: 1"
size_flags_horizontal = 3

[node name="StatusBars" type="VBoxContainer" parent="Root/TopBar/LeftPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="HealthContainer" type="HBoxContainer" parent="Root/TopBar/LeftPanel/StatusBars"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="Root/TopBar/LeftPanel/StatusBars/HealthContainer"]
layout_mode = 2
text = "HP:"
custom_minimum_size = Vector2(40, 0)

[node name="HealthBar" type="ProgressBar" parent="Root/TopBar/LeftPanel/StatusBars/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 100.0
show_percentage = false

[node name="XPContainer" type="HBoxContainer" parent="Root/TopBar/LeftPanel/StatusBars"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="Root/TopBar/LeftPanel/StatusBars/XPContainer"]
layout_mode = 2
text = "XP:"
custom_minimum_size = Vector2(40, 0)

[node name="XPBar" type="ProgressBar" parent="Root/TopBar/LeftPanel/StatusBars/XPContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 100.0
value = 0.0
show_percentage = false

[node name="RightPanel" type="VBoxContainer" parent="Root/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="WeaponInfo" type="VBoxContainer" parent="Root/TopBar/RightPanel"]
layout_mode = 2
alignment = 2

[node name="WeaponLabel" type="Label" parent="Root/TopBar/RightPanel/WeaponInfo"]
layout_mode = 2
text = "Weapon: Handgun"
horizontal_alignment = 2

[node name="ProficiencyLabel" type="Label" parent="Root/TopBar/RightPanel/WeaponInfo"]
layout_mode = 2
text = "Proficiency: 0%"
horizontal_alignment = 2

[node name="SurvivalPanel" type="HBoxContainer" parent="Root/TopBar/RightPanel"]
layout_mode = 2

[node name="NourishmentContainer" type="VBoxContainer" parent="Root/TopBar/RightPanel/SurvivalPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NourishmentLabel" type="Label" parent="Root/TopBar/RightPanel/SurvivalPanel/NourishmentContainer"]
layout_mode = 2
text = "Food"
horizontal_alignment = 1

[node name="NourishmentBar" type="ProgressBar" parent="Root/TopBar/RightPanel/SurvivalPanel/NourishmentContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="SleepContainer" type="VBoxContainer" parent="Root/TopBar/RightPanel/SurvivalPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SleepLabel" type="Label" parent="Root/TopBar/RightPanel/SurvivalPanel/SleepContainer"]
layout_mode = 2
text = "Rest"
horizontal_alignment = 1

[node name="SleepBar" type="ProgressBar" parent="Root/TopBar/RightPanel/SurvivalPanel/SleepContainer"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Captions" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 50.0
offset_right = 50.0
offset_bottom = 100.0
text = ""
horizontal_alignment = 1
